feat: add manual address to service orders
